force-app/main/default/objects/Fitness_Session__c/Fitness_Session__c.object-meta.xml
<CustomObject>
    <label>Fitness Session</label>
    <nameField>
        <displayFormat>Session Number - {0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitness Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>