force-app/main/default/objects/Fitness_Session__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardio</fullName>
            </value>
            <value>
                <fullName>Strength Training</fullName>
            </value>
            <value>
                <fullName>Yoga</fullName>
            </value>
            <value>
                <fullName>Pilates</fullName>
            </value>
            <value>
                <fullName>High-Intensity Interval Training (HIIT)</fullName>
            </value>
            <value>
                <fullName>Dance</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>CrossFit</fullName>
            </value>
            <value>
                <fullName>Martial Arts</fullName>
            </value>
            <value>
                <fullName>Stretching</fullName>
            </value>
            <value>
                <fullName>Outdoor Activity</fullName>
            </value>
            <value>
                <fullName>Functional Training</fullName>
            </value>
            <value>
                <fullName>Team Sports</fullName>
            </value>
            <value>
                <fullName>Zumba</fullName>
            </value>
            <value>
                <fullName>Aerobics</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Walking</fullName>
            </value>
            <value>
                <fullName>Core Training</fullName>
            </value>
            <value>
                <fullName>Meditation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>