force-app/main/default/objects/Fitness_Session__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fitness Sessions</relationshipLabel>
    <relationshipName>Fitness_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>