force-app/main/default/objects/Fitness_Session__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fitness Sessions</relationshipLabel>
    <relationshipName>Fitness_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>